# Nexdev

./: Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  detect.rs  i18n.rs  main.rs  navigator.rs  preview.rs  shell.rs
